src/objects/Booth_Visit__c.object
<CustomObject>
    <description>Used for data from visit to booth when we exhibit at conferences (for example, social studies teacher conventions).</description>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Contact record of the person who visited the booth.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Booth Visits</relationshipLabel>
        <relationshipName>Booth_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <inlineHelpText>Name of event where JSA exhibited</inlineHelpText>
        <label>Event Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Follow_up__c</fullName>
        <label>Intended Follow-up</label>
        <picklist>
            <picklistValues>
                <fullName>Contact immediately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact during scheduled campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No current contact required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JSA_Familiarity__c</fullName>
        <label>JSA Familiarity</label>
        <picklist>
            <picklistValues>
                <fullName>Teacher is JSA alum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not alum but heard of JSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can provide recommendation/testimonials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never previously heard of JSA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Visit__c</fullName>
        <label>Purpose of Visit</label>
        <picklist>
            <picklistValues>
                <fullName>General interest in JSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest in forming chapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest in Summer School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Want to nominate students for programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest in JSA conventions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest in JSA for own child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teach_Value_Designation__c</fullName>
        <label>Teach Value Designation</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Booth Visit</label>
    <nameField>
        <displayFormat>BV-{0000}</displayFormat>
        <label>Booth Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>